--- a/UAS_Project.html
+++ b/UAS_Project.html
@@ -426,3 +426,54 @@
 </section>
 
 <!-- contact section ends -->
+
+<!-- footer section starts  -->
+
+<section class="footer">
+
+    <div class="box-container">
+
+        <div class="box">
+            <h3>quick links</h3>
+            <a href="#">home</a>
+            <a href="#">about</a>
+            <a href="#">products</a>
+            <a href="#">review</a>
+            <a href="#">contact</a>
+        </div>
+
+        <div class="box">
+            <h3>extra links</h3>
+            <a href="#">my account</a>
+            <a href="#">my order</a>
+            <a href="#">my favorite</a>
+        </div>
+
+        <div class="box">
+            <h3>locations</h3>
+            <a href="#">Medan</a>
+            <a href="#">Jakarta</a>
+            <a href="#">Bogor</a>
+            <a href="#">Jogjakarta</a>
+        </div>
+
+        <div class="box">
+            <h3>contact info</h3>
+            <a href="#">+113-114-1134</a>
+            <a href="#">Coffeebreak@gmail.com</a>
+            <a href="#">Sumatera Utara - Indonesia 400104</a>
+            <img src="images/payment.png" alt="">
+        </div>
+
+    </div>
+
+    <div class="credit"> created by <span> mr. Junior designer </span> | all rights reserved </div>
+
+</section>
+
+<!-- footer section ends -->
+
+
+    
+</body>
+</html>
